--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "license": "MIT",
+  "homepage": "https://lalLaL95828.github.io/lalrc",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lalLAL95828/lalrc"
+  },
   "files": [
     "dist"
   ],
@@ -17,8 +22,11 @@
     "React"
   ],
   "dependencies": {
+    "@mdi/js": "^5.3.45",
     "@mdi/react": "^1.4.0",
-    "@mdi/js": "^5.3.45"
+    "@types/react-transition-group": "^4.4.0",
+    "classnames": "^2.2.6",
+    "react-transition-group": "^4.4.1"
   },
   "peerDependencies": {
     "react": ">=16.13.0",
