--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mdi/js": "^5.3.45",
     "@mdi/react": "^1.4.0",
     "@types/react-transition-group": "^4.4.0",
+    "animate.css": "^4.1.0",
     "classnames": "^2.2.6",
     "react-transition-group": "^4.4.1"
   },
@@ -73,9 +74,11 @@
     "@storybook/addons": "^5.3.19",
     "@storybook/preset-create-react-app": "^3.0.0",
     "@storybook/react": "^5.3.19",
+    "@storybook/theming": "^5.3.19",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/classnames": "^2.2.10",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.12.44",
     "@types/react": "^16.9.35",
