--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@types/react-transition-group": "^4.4.0",
     "animate.css": "^4.1.0",
     "classnames": "^2.2.6",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "uuid": "^8.1.0"
   },
   "peerDependencies": {
     "react": ">=16.13.0",
@@ -84,6 +85,7 @@
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@types/storybook__addon-info": "^5.2.1",
+    "@types/uuid": "^8.0.0",
     "cross-env": "^7.0.2",
     "husky": "^4.2.5",
     "node-sass": "^4.14.1",
